fixed a bug where the floating images appeared behind double faced preview cards

--- a/client/app/components/TopBanner/TopBanner.css
+++ b/client/app/components/TopBanner/TopBanner.css
@@ -18,7 +18,7 @@
   position: absolute;
   right: 500px;
   top: 40px;
-  z-index: 2;
+  z-index: 4;
 }
 
 #floating-card-container img {
